--- a/src/Main.css
+++ b/src/Main.css
@@ -9,7 +9,7 @@
   display:flex;
   flex-direction: row;
   justify-content: center;
-
+  /*width:100%;*/
 }
 
 .hand{
@@ -20,8 +20,8 @@
 }
 
 .card{
-  width:100px;
-  height:100px;
+  width:80px;
+  height:80px;
   margin:5px;
   border:3px solid black;
   background-color: #e4e4ef;
