--- a/src/Main.css
+++ b/src/Main.css
@@ -1,8 +1,19 @@
 .container{
-  height:100vh; 
+  height:100%; 
   width:100%;
   display: flex;
   flex-direction: column;
+  padding:10px;
+  box-sizing: border-box;
+}
+
+.nicebox{
+  background-color: #f7f7f7 !important; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+  border-radius: 5px;
+  box-sizing:border-box;
+  /*border:2px solid black; */
+  border-radius:5px;
 }
 
 .row{
@@ -25,4 +36,5 @@
   margin:5px;
   border:3px solid black;
   background-color: #e4e4ef;
+  cursor: pointer;
 }
