--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html{
 	width:100vw;
-  	background-color: #d2c3f1;
+	background-color: #e7e7e7 !important;
 }
 
 body {
@@ -12,9 +12,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width:100%;
   height:100vh;
+  padding:0px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root{
+	height:100%;
 }
