--- a/src/Main.css
+++ b/src/Main.css
@@ -31,8 +31,8 @@
 }
 
 .card{
-  width:80px;
-  height:80px;
+  width:9vh;
+  height:9vh;
   margin:5px;
   border:3px solid black;
   background-color: #e4e4ef;
