--- a/src/Main.css
+++ b/src/Main.css
@@ -32,7 +32,9 @@
 
 .card{
   width:9vh;
+  min-width:"2vw";
   height:9vh;
+  min-width:"2vw";
   margin:5px;
   border:3px solid black;
   background-color: #e4e4ef;
