--- a/src/Main.css
+++ b/src/Main.css
@@ -31,10 +31,10 @@
 }
 
 .card{
-  width:9vh;
-  min-width:"2vw";
-  height:9vh;
-  min-width:"2vw";
+  width:6vw;
+  min-width:50px;
+  height:6vw;
+  min-width:50px;
   margin:5px;
   border:3px solid black;
   background-color: #e4e4ef;
