--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html{
 	width:100vw;
 	background: #FCD7BA url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;;
   animation: slide 20s linear infinite;
+  color:#0C0C0C;
 }
 
 @keyframes slide {
