--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  height:100% !important;
+  height:100vh !important;
   width:100%;
   background-color: #0094fd;
 }
