--- a/src/Main.css
+++ b/src/Main.css
@@ -14,6 +14,11 @@
   src: url(https://fonts.gstatic.com/s/materialicons/v67/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
 }
 
+.swiper-slide-zoomed-a{
+  cursor:move;
+  z-index:1;
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
